// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions::Matches should handle fetching data - getting an error 1`] = `
Array [
  Object {
    "loading": true,
    "type": "MATCHES_LOADING",
  },
  Object {
    "error": true,
    "type": "MATCHES_ERROR",
  },
]
`;

exports[`Actions::Matches should handle fetching data - send correct actions 1`] = `
Array [
  Object {
    "loading": true,
    "type": "MATCHES_LOADING",
  },
  Object {
    "loading": false,
    "type": "MATCHES_LOADING",
  },
  Object {
    "matches": Object {
      "data": Array [],
    },
    "type": "MATCHES_FETCH_SUCCESS",
  },
]
`;

exports[`Actions::Matches should handle the result of user submissions - did match 1`] = `
Array [
  Object {
    "loading": true,
    "type": "MATCHES_LOADING",
  },
  Object {
    "matched": true,
    "type": "MATCHES_USERS_MATCHED",
  },
  Object {
    "loading": false,
    "type": "MATCHES_LOADING",
  },
]
`;

exports[`Actions::Matches should handle the result of user submissions - did not match 1`] = `
Array [
  Object {
    "matched": false,
    "type": "MATCHES_USERS_MATCHED",
  },
]
`;
